@@ -1,31 +1,12 @@
-# $NetBSD: Makefile,v 1.19 2006/07/14 16:24:29 jlam Exp $
-#
+# $NetBSD: Makefile,v 1.20 2006/07/14 21:41:42 jlam Exp $
 
-DISTNAME=		tnftp-20050625
-SVR4_PKGNAME=		tnftp
-CATEGORIES=		net
-MASTER_SITES=		# empty
-DISTFILES=		# empty
+.include "Makefile.common"
 
-# distfile obtained from: ftp://ftp.NetBSD.org/pub/NetBSD/misc/tnftp
+CATEGORIES=	net
 
-MAINTAINER=		lukem@NetBSD.org
-COMMENT=		The enhanced FTP client in NetBSD
-
-GNU_CONFIGURE=		YES
-
-CONFLICTS+=		kth-krb4-[0-9]*
-CONFLICTS+=		lukemftp-[0-9]*
-
-NO_CHECKSUM=		yes
-NO_MTREE=		yes
+CONFLICTS+=	kth-krb4-[0-9]*
+CONFLICTS+=	lukemftp-[0-9]*
 
 .include "options.mk"
-
-OPSYSVARS+=		MAKE_ENV
-MAKE_ENV.SunOS+=	CPPFLAGS=""
-
-do-extract:
-	@${CP} -R ${FILESDIR} ${WRKSRC}
 
 .include "../../mk/bsd.pkg.mk"
